--- a/pixi.toml
+++ b/pixi.toml
@@ -15,3 +15,6 @@ matplotlib = ">=3.9.2,<4"
 pandas = ">=2.2.3,<3"
 polars = ">=1.9.0,<2"
 statsmodels = ">=0.14.4,<0.15"
+ipykernel = ">=6.29.5,<7"
+jupyterlab = ">=4.2.5,<5"
+pyarrow = ">=17.0.0,<18"
