pixi jupyterlab stuff

--- a/pyrightconfig.json
+++ b/pyrightconfig.json
@@ -1,4 +1,4 @@
 {
   "venv": "default",
-  "venvPath": "/Users/steve/miniconda3/envs"
+  "venvPath": "/Users/steve/code/try/decompose/.pixi/envs"
 }
